<resources>
    <string name="app_name">Pharmacy Android Application</string>
    <string name="type_a_message">Nhập tin nhắn</string>
    <string name="warehouse_management">Quản lý kho</string>
    <string name="inventory">Tồn kho</string>
    <string name="stock_in">Nhập kho</string>
    <string name="stock_out">Xuất kho</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="quan_ly_don_hang">Quản lý đơn hàng</string>
    <string name="product_management">Quản lý sản phẩm</string>
    <string name="category_management">Quản lý loại sản phẩm</string>
    <string name="id_order">id order</string>
    <string name="statistic">Thống kê</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="signup">Đăng ký</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="haru_pharmacy">Haru Pharmacy</string>
    <string name="otp">Gửi mã OTP</string>
    <string name="confirm">Xác nhận</string>
    <string-array name="province">
        <item>Chọn tỉnh thành phố</item>
        <item>Thành phố Hà Nội</item>
        <item>Tỉnh Hà Giang</item>
        <item>Tỉnh Cao Bằng</item>
        <item>Tỉnh Bắc Kạn</item>
        <item>Tỉnh Tuyên Quang</item>
        <item>Tỉnh Lào Cai</item>
        <item>Tỉnh Điện Biên</item>
        <item>Tỉnh Lai Châu</item>
        <item>Tỉnh Sơn La</item>
        <item>Tỉnh Yên Bái</item>
        <item>Tỉnh Hoà Bình</item>
        <item>Tỉnh Thái Nguyên</item>
        <item>Tỉnh Lạng Sơn</item>
        <item>Tỉnh Quảng Ninh</item>
        <item>Tỉnh Bắc Giang</item>
        <item>Tỉnh Phú Thọ</item>
        <item>Tỉnh Vĩnh Phúc</item>
        <item>Tỉnh Bắc Ninh</item>
        <item>Tỉnh Hải Dương</item>
        <item>Thành phố Hải Phòng</item>
        <item>Tỉnh Hưng Yên</item>
        <item>Tỉnh Thái Bình</item>
        <item>Tỉnh Hà Nam</item>
        <item>Tỉnh Nam Định</item>
        <item>Tỉnh Ninh Bình</item>
        <item>Tỉnh Thanh Hóa</item>
        <item>Tỉnh Nghệ An</item>
        <item>Tỉnh Hà Tĩnh</item>
        <item>Tỉnh Quảng Bình</item>
        <item>Tỉnh Quảng Trị</item>
        <item>Tỉnh Thừa Thiên Huế</item>
        <item>Thành phố Đà Nẵng</item>
        <item>Tỉnh Quảng Nam</item>
        <item>Tỉnh Quảng Ngãi</item>
        <item>Tỉnh Bình Định</item>
        <item>Tỉnh Phú Yên</item>
        <item>Tỉnh Khánh Hòa</item>
        <item>Tỉnh Ninh Thuận</item>
        <item>Tỉnh Bình Thuận</item>
        <item>Tỉnh Kon Tum</item>
        <item>Tỉnh Gia Lai</item>
        <item>Tỉnh Đắk Lắk</item>
        <item>Tỉnh Đắk Nông</item>
        <item>Tỉnh Lâm Đồng</item>
        <item>Tỉnh Bình Phước</item>
        <item>Tỉnh Tây Ninh</item>
        <item>Tỉnh Bình Dương</item>
        <item>Tỉnh Đồng Nai</item>
        <item>Tỉnh Bà Rịa - Vũng Tàu</item>
        <item>Thành phố Hồ Chí Minh</item>
        <item>Tỉnh Long An</item>
        <item>Tỉnh Tiền Giang</item>
        <item>Tỉnh Bến Tre</item>
        <item>Tỉnh Trà Vinh</item>
        <item>Tỉnh Vĩnh Long</item>
        <item>Tỉnh Đồng Tháp</item>
        <item>Tỉnh An Giang</item>
        <item>Tỉnh Kiên Giang</item>
        <item>Thành phố Cần Thơ</item>
        <item>Tỉnh Hậu Giang</item>
        <item>Tỉnh Sóc Trăng</item>
        <item>Tỉnh Bạc Liêu</item>
        <item>Tỉnh Cà Mau</item>
    </string-array>
    <string-array name="array_default_district">
        <item>Chọn quận huyện</item>
    </string-array>
    <string-array name="array_thanhphohanoi_district">
        <item>Chọn quận huyện</item>
        <item>Quận Ba Đình</item>
        <item>Quận Hoàn Kiếm</item>
        <item>Quận Tây Hồ</item>
        <item>Quận Long Biên</item>
        <item>Quận Cầu Giấy</item>
        <item>Quận Đống Đa</item>
        <item>Quận Hai Bà Trưng</item>
        <item>Quận Hoàng Mai</item>
        <item>Quận Thanh Xuân</item>
        <item>Huyện Sóc Sơn</item>
        <item>Huyện Đông Anh</item>
        <item>Huyện Gia Lâm</item>
        <item>Quận Nam Từ Liêm</item>
        <item>Huyện Thanh Trì</item>
        <item>Quận Bắc Từ Liêm</item>
        <item>Huyện Mê Linh</item>
        <item>Quận Hà Đông</item>
        <item>Thị xã Sơn Tây</item>
        <item>Huyện Ba Vì</item>
        <item>Huyện Phúc Thọ</item>
        <item>Huyện Đan Phượng</item>
        <item>Huyện Hoài Đức</item>
        <item>Huyện Quốc Oai</item>
        <item>Huyện Thạch Thất</item>
        <item>Huyện Chương Mỹ</item>
        <item>Huyện Thanh Oai</item>
        <item>Huyện Thường Tín</item>
        <item>Huyện Phú Xuyên</item>
        <item>Huyện Ứng Hòa</item>
        <item>Huyện Mỹ Đức</item>
    </string-array>
    <string-array name="array_tinhhagiang_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Hà Giang</item>
        <item>Huyện Đồng Văn</item>
        <item>Huyện Mèo Vạc</item>
        <item>Huyện Yên Minh</item>
        <item>Huyện Quản Bạ</item>
        <item>Huyện Vị Xuyên</item>
        <item>Huyện Bắc Mê</item>
        <item>Huyện Hoàng Su Phì</item>
        <item>Huyện Xín Mần</item>
        <item>Huyện Bắc Quang</item>
        <item>Huyện Quang Bình</item>
    </string-array>
    <string-array name="array_tinhcaobang_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Cao Bằng</item>
        <item>Huyện Bảo Lâm</item>
        <item>Huyện Bảo Lạc</item>
        <item>Huyện Hà Quảng</item>
        <item>Huyện Trùng Khánh</item>
        <item>Huyện Hạ Lang</item>
        <item>Huyện Quảng Hòa</item>
        <item>Huyện Hoà An</item>
        <item>Huyện Nguyên Bình</item>
        <item>Huyện Thạch An</item>
    </string-array>
    <string-array name="array_tinhbackan_district">
        <item>Chọn quận huyện</item>
        <item>Thành Phố Bắc Kạn</item>
        <item>Huyện Pác Nặm</item>
        <item>Huyện Ba Bể</item>
        <item>Huyện Ngân Sơn</item>
        <item>Huyện Bạch Thông</item>
        <item>Huyện Chợ Đồn</item>
        <item>Huyện Chợ Mới</item>
        <item>Huyện Na Rì</item>
    </string-array>
    <string-array name="array_tinhtuyenquang_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Tuyên Quang</item>
        <item>Huyện Lâm Bình</item>
        <item>Huyện Na Hang</item>
        <item>Huyện Chiêm Hóa</item>
        <item>Huyện Hàm Yên</item>
        <item>Huyện Yên Sơn</item>
        <item>Huyện Sơn Dương</item>
    </string-array>
    <string-array name="array_tinhlaocai_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Lào Cai</item>
        <item>Huyện Bát Xát</item>
        <item>Huyện Mường Khương</item>
        <item>Huyện Si Ma Cai</item>
        <item>Huyện Bắc Hà</item>
        <item>Huyện Bảo Thắng</item>
        <item>Huyện Bảo Yên</item>
        <item>Thị xã Sa Pa</item>
        <item>Huyện Văn Bàn</item>
    </string-array>
    <string-array name="array_tinhdienbien_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Điện Biên Phủ</item>
        <item>Thị Xã Mường Lay</item>
        <item>Huyện Mường Nhé</item>
        <item>Huyện Mường Chà</item>
        <item>Huyện Tủa Chùa</item>
        <item>Huyện Tuần Giáo</item>
        <item>Huyện Điện Biên</item>
        <item>Huyện Điện Biên Đông</item>
        <item>Huyện Mường Ảng</item>
        <item>Huyện Nậm Pồ</item>
    </string-array>
    <string-array name="array_tinhlaichau_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Lai Châu</item>
        <item>Huyện Tam Đường</item>
        <item>Huyện Mường Tè</item>
        <item>Huyện Sìn Hồ</item>
        <item>Huyện Phong Thổ</item>
        <item>Huyện Than Uyên</item>
        <item>Huyện Tân Uyên</item>
        <item>Huyện Nậm Nhùn</item>
    </string-array>
    <string-array name="array_tinhsonla_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Sơn La</item>
        <item>Huyện Quỳnh Nhai</item>
        <item>Huyện Thuận Châu</item>
        <item>Huyện Mường La</item>
        <item>Huyện Bắc Yên</item>
        <item>Huyện Phù Yên</item>
        <item>Huyện Mộc Châu</item>
        <item>Huyện Yên Châu</item>
        <item>Huyện Mai Sơn</item>
        <item>Huyện Sông Mã</item>
        <item>Huyện Sốp Cộp</item>
        <item>Huyện Vân Hồ</item>
    </string-array>
    <string-array name="array_tinhyenbai_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Yên Bái</item>
        <item>Thị xã Nghĩa Lộ</item>
        <item>Huyện Lục Yên</item>
        <item>Huyện Văn Yên</item>
        <item>Huyện Mù Căng Chải</item>
        <item>Huyện Trấn Yên</item>
        <item>Huyện Trạm Tấu</item>
        <item>Huyện Văn Chấn</item>
        <item>Huyện Yên Bình</item>
    </string-array>
    <string-array name="array_tinhhoabinh_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Hòa Bình</item>
        <item>Huyện Đà Bắc</item>
        <item>Huyện Lương Sơn</item>
        <item>Huyện Kim Bôi</item>
        <item>Huyện Cao Phong</item>
        <item>Huyện Tân Lạc</item>
        <item>Huyện Mai Châu</item>
        <item>Huyện Lạc Sơn</item>
        <item>Huyện Yên Thủy</item>
        <item>Huyện Lạc Thủy</item>
    </string-array>
    <string-array name="array_tinhthainguyen_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Thái Nguyên</item>
        <item>Thành phố Sông Công</item>
        <item>Huyện Định Hóa</item>
        <item>Huyện Phú Lương</item>
        <item>Huyện Đồng Hỷ</item>
        <item>Huyện Võ Nhai</item>
        <item>Huyện Đại Từ</item>
        <item>Thành phố Phổ Yên</item>
        <item>Huyện Phú Bình</item>
    </string-array>
    <string-array name="array_tinhlangson_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Lạng Sơn</item>
        <item>Huyện Tràng Định</item>
        <item>Huyện Bình Gia</item>
        <item>Huyện Văn Lãng</item>
        <item>Huyện Cao Lộc</item>
        <item>Huyện Văn Quan</item>
        <item>Huyện Bắc Sơn</item>
        <item>Huyện Hữu Lũng</item>
        <item>Huyện Chi Lăng</item>
        <item>Huyện Lộc Bình</item>
        <item>Huyện Đình Lập</item>
    </string-array>
    <string-array name="array_tinhquangninh_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Hạ Long</item>
        <item>Thành phố Móng Cái</item>
        <item>Thành phố Cẩm Phả</item>
        <item>Thành phố Uông Bí</item>
        <item>Huyện Bình Liêu</item>
        <item>Huyện Tiên Yên</item>
        <item>Huyện Đầm Hà</item>
        <item>Huyện Hải Hà</item>
        <item>Huyện Ba Chẽ</item>
        <item>Huyện Vân Đồn</item>
        <item>Thị xã Đông Triều</item>
        <item>Thị xã Quảng Yên</item>
        <item>Huyện Cô Tô</item>
    </string-array>
    <string-array name="array_tinhbacgiang_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Bắc Giang</item>
        <item>Huyện Yên Thế</item>
        <item>Huyện Tân Yên</item>
        <item>Huyện Lạng Giang</item>
        <item>Huyện Lục Nam</item>
        <item>Huyện Lục Ngạn</item>
        <item>Huyện Sơn Động</item>
        <item>Huyện Yên Dũng</item>
        <item>Huyện Việt Yên</item>
        <item>Huyện Hiệp Hòa</item>
    </string-array>
    <string-array name="array_tinhphutho_district">
        <item>Chọn quận huyện</item>
        <item>Thành phố Việt Trì</item>
        <item>Thị xã Phú Thọ</item>
        <item>Huyện Đoan Hùng</item>
        <item>Huyện Hạ Hoà</item>
        <item>Huyện Thanh Ba</item>
        <item>Huyện Phù Ninh</item>
        <item>Huyện Yên Lập</item>
        <item>Huyện Cẩm Khê</item>
        <item>Huyện Tam Nông</item>
        <item>Huyện Lâm Thao</item>
        <item>Huyện Thanh Sơn</item>
        <item>Huyện Thanh Thuỷ</item>
        <item>Huyện Tân Sơn</item>
    </string-array>
</resources>