<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="7"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logo_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gradientLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="9"
        android:background="@drawable/gradient_no_radius"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/customView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_310sdp"
                android:layout_gravity="center"
                android:background="@drawable/border_radius"
                android:elevation="@dimen/_8sdp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/signup"
                        android:textAllCaps="true"
                        android:textColor="@color/app_theme"
                        android:textSize="@dimen/heading_1"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="@dimen/_230sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:textColorHint="#A6A2A2"
                        android:background="@null"
                        app:hintEnabled="false"
                        android:layout_marginTop="@dimen/_10sdp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usernameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/edittext_border_radius"
                            android:gravity="center"
                            android:hint="@string/username"
                            android:drawableLeft="@drawable/ic_user"
                            android:drawableTint="@color/gray"
                            android:drawablePadding="-50dp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:textSize="@dimen/text_size_medium"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_16sdp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="@dimen/_230sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        app:passwordToggleEnabled="true"
                        android:textColorHint="#A6A2A2"
                        android:background="@null"
                        app:hintEnabled="false">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/password"
                            android:textSize="@dimen/text_size_medium"
                            android:background="@drawable/edittext_border_radius"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawableTint="@color/gray"
                            android:drawablePadding="-50dp"
                            android:paddingLeft="@dimen/_15sdp"
                            >
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp" />

                    <Button
                        android:id="@+id/SignUpButton"
                        android:layout_width="@dimen/_230sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/app_theme"
                        android:elevation="@dimen/_8sdp"
                        android:text="@string/signup"
                        android:textColor="@color/text_theme"
                        android:textSize="@dimen/text_size_medium"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:scaleType="centerCrop">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Nếu đã có tài khoản? "
                android:textColor="@color/text_theme"
                android:textSize="@dimen/text_size_medium"/>
            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="Đăng nhập"
                android:textColor="@color/text_theme"
                android:textSize="@dimen/text_size_medium"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>